refactor: tag OCR integration tests and use URI for thumbnail URLs